# ai-art-gallery-studio

./: .gitignore  ARCHITECTURE.md  DESKTOP_PACKAGING.md  LICENSE  README.md  SECURITY.md  config.desktop.yaml  config_example.yaml  manage.sh  package-lock.json  package.json  pyproject.toml
app/: config.py  database.py  desktop_backend.py  main.py
app/routers/: api_proxy.py  auth.py  balance.py  desktop_secret.py  gallery.py  history.py  pages.py
app/static/css/: common.css  docs.css  gallery.css  home.css  play.css
app/static/js/: common.js  gallery.js  play.js
app/templates/: admin.html  base.html  docs.html  gallery.html  home.html  play.html
scripts/: build_backend_sidecar.py
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml
src-tauri/placeholder-dist/: index.html
src-tauri/src/: main.rs
