[project]
name = "ai-studio"
version = "1.0.0"
description = "AI 创意工坊 - AI图片生成平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
mysql = [
    "aiomysql>=0.2.0",
    "cryptography>=43.0.0",
]

[project.scripts]
ai-studio = "app.main:run"
