[package]
name = "ai-art-gallery-studio-desktop"
version = "1.0.0"
description = "AI Art Gallery Studio desktop app"
authors = ["AI Art Gallery Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
