[package]
name = "ai-art-gallery-studio-desktop"
version = "1.0.0"
description = "AI Art Gallery Studio desktop app"
authors = ["AI Art Gallery Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
rfd = "0.15"
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
